--- a/src/scss/modules/component/_webgl.scss
+++ b/src/scss/modules/component/_webgl.scss
@@ -56,7 +56,8 @@
   width: 200px;
   @include mixin.small {
     //大画面スマホ
-    visibility: hidden;
+    transform-origin: 100% 0%;
+    transform: scale(0.8);
   }
   li {
     font-size: 50px;
